--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,8 @@
     "*.iws"
   ],
   "dependencies": {
-    "angular": "^1.2.0",
-    "angular-ui-router": "^0.2.8"
+    "angular": "1.7.7",
+    "angular-ui-router": "1.0.18"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
